cf_analysis_results/checkerframework_3.43.0_WPI_results_JDK_11/url46a88cc932_toby1984_tinyc_tgz-pJ8-de_codesourcery_dcpu16_compiler_CompilerJ8.txt
../dataset/june2020_dataset_copy/url46a88cc932_toby1984_tinyc_tgz-pJ8-de_codesourcery_dcpu16_compiler_CompilerJ8/src/de/codesourcery/dcpu16/parser/Lexer.java:52: error: (required.method.not.called) $$ 4 $$ method close $$ newIn $$ java.io.InputStream $$ possible exceptional exit due to new Scanner(newIn, currentOffset) with exception type java.io.IOException $$ ( 1820, 1881 ) $$ @MustCall method close may not have been invoked on newIn or any of its aliases.
            final InputStream newIn = createInputStream( currentOffset );
                              ^
  The type of object is: java.io.InputStream.
  Reason for going out of scope: possible exceptional exit due to new Scanner(newIn, currentOffset) with exception type java.io.IOException
../dataset/june2020_dataset_copy/url46a88cc932_toby1984_tinyc_tgz-pJ8-de_codesourcery_dcpu16_compiler_CompilerJ8/src/de/codesourcery/dcpu16/parser/Lexer.java:58: error: (required.method.not.called) $$ 4 $$ method close $$ input.createInputStream() $$ java.io.InputStream $$ possible exceptional exit due to advanceInputStream(input.createInputStream(), offset) with exception type java.io.EOFException $$ ( 2096, 2121 ) $$ @MustCall method close may not have been invoked on input.createInputStream() or any of its aliases.
        return advanceInputStream( input.createInputStream() , offset );
                                                          ^
  The type of object is: java.io.InputStream.
  Reason for going out of scope: possible exceptional exit due to advanceInputStream(input.createInputStream(), offset) with exception type java.io.EOFException
../dataset/june2020_dataset_copy/url46a88cc932_toby1984_tinyc_tgz-pJ8-de_codesourcery_dcpu16_compiler_CompilerJ8/src/de/codesourcery/dcpu16/parser/Lexer.java:81: error: (required.method.not.called) $$ 4 $$ method close $$ input.createInputStream() $$ java.io.InputStream $$ possible exceptional exit due to new Scanner(input.createInputStream()) with exception type java.io.IOException $$ ( 2747, 2772 ) $$ @MustCall method close may not have been invoked on input.createInputStream() or any of its aliases.
        this.scanner = new Scanner(input.createInputStream());
                                                          ^
  The type of object is: java.io.InputStream.
  Reason for going out of scope: possible exceptional exit due to new Scanner(input.createInputStream()) with exception type java.io.IOException
../dataset/june2020_dataset_copy/url46a88cc932_toby1984_tinyc_tgz-pJ8-de_codesourcery_dcpu16_compiler_CompilerJ8/src/de/codesourcery/dcpu16/parser/Lexer.java:410: error: (required.method.not.called) $$ 4 $$ method close $$ createInputStream(previousToken.getOffset()) $$ java.io.InputStream $$ possible exceptional exit due to new Scanner(createInputStream(previousToken.getOffset())) with exception type java.io.IOException $$ ( 13259, 13305 ) $$ @MustCall method close may not have been invoked on createInputStream(previousToken.getOffset()) or any of its aliases.
    		this.scanner= new Scanner( createInputStream( previousToken.getOffset() ) );
    		                                            ^
  The type of object is: java.io.InputStream.
  Reason for going out of scope: possible exceptional exit due to new Scanner(createInputStream(previousToken.getOffset())) with exception type java.io.IOException
Note: ../dataset/june2020_dataset_copy/url46a88cc932_toby1984_tinyc_tgz-pJ8-de_codesourcery_dcpu16_compiler_CompilerJ8/src/de/codesourcery/dcpu16/optimizer/dataflow/DataFlowAnalyzer.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
4 errors
